src/parser/snapshots/cranexpr__parser__tests__atan2.snap
---
source: src/parser/mod.rs
expression: "parse_expr(\"y x atan2\").unwrap()"
---
- Binary:
    - Atan2
    - Ident: y
    - Ident: x
