src/parser/snapshots/cranexpr__parser__tests__clip.snap
---
source: src/parser/mod.rs
expression: "parse_expr(\"x 16 235 clip\").unwrap()"
---
Ternary:
  - Clip
  - Ident: x
  - Lit: 16
  - Lit: 235
