src/parser/snapshots/cranexpr__parser__tests__dup.snap
---
source: src/parser/mod.rs
expression: "parse_expr(\"x dup *\").unwrap()"
---
- Binary:
    - Mul
    - Ident: x
    - Ident: x
