src/parser/snapshots/cranexpr__parser__tests__eq_op.snap
---
source: src/parser/mod.rs
expression: "parse_expr(\"x y =\").unwrap()"
---
- Binary:
    - Eq
    - Ident: x
    - Ident: y
