src/parser/snapshots/cranexpr__parser__tests__negative_literal.snap
---
source: src/parser/mod.rs
expression: "parse_expr(\"-4 -5 - 6 -\").unwrap()"
---
Binary:
  - Sub
  - Binary:
      - Sub
      - Lit: -4
      - Lit: -5
  - Lit: 6
