src/parser/snapshots/cranexpr__parser__tests__prop.snap
---
source: src/parser/mod.rs
expression: "parse_expr(\"x.PlaneStatsAverage\").unwrap()"
---
- Prop:
    - x
    - PlaneStatsAverage
